--- a/src/main.css
+++ b/src/main.css
@@ -13,10 +13,31 @@
 }
 
 
-html, body {
+
+html{
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    color: white;
+}
+
+body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
 }
 
+#webgl-canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+
+#webgl-canvas canvas {
+    width: 100%;
+    height: 100%;
+}
