--- a/src/main.css
+++ b/src/main.css
@@ -19,6 +19,17 @@ body {
     overscroll-behavior-y: contain;
 }
 
+
+.reset-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    color: inherit;
+}
+
+
 #fps {
     position: fixed;
     top: 0;
@@ -45,15 +56,10 @@ body {
     color: #aeaebe;
 }
 
-#content nav a {
-    color: #aeaebe;
+#content button {
+    text-decoration: underline;
 }
 
-#content nav .selected {
-    color: #aedeff;
-    text-decoration: none;
-    cursor: default;
-}
 
 #controls {
     position: fixed;
@@ -62,10 +68,57 @@ body {
     padding: min(30px, 5vmin);
     width: 100%;
     height: 100%;
-    opacity: 0; /* TEMP */
+    z-index: -10;
+    color: #aeaebe;
+    opacity: 1;
+}
+
+#controls ul {
+    list-style-type: "- ";
+}
+
+#controls h3 {
+    margin-bottom: 4px;
+}
+
+#controls p {
+    margin-top: 0px;
+    font-size: 12px;
 }
 
 .fade-out {
     transition: opacity 3s ease-out;
-    opacity: 0;
+    opacity: 0 !important;
 }
+
+
+#about {
+    position: fixed;
+    left: 0;
+    top: 0;
+    padding: 5vmin;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    z-index: 10;
+    color: #aeaebe;
+    background-color: black;
+}
+
+#about ul {
+    list-style-type: "- ";
+}
+
+#about h1, #about h2, #about h3 {
+    color: white;
+}
+
+#about a {
+    color: #3b87c4;
+}
+
+/* @media only screen and (max-width: 900px) { */
+/*     #content a { */
+/*         font-size: 14px; */
+/*     } */
+/* } */
